--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,9 @@
               <a href="./index.html" class="link-nav link">Studio</a>
             </li>
             <li class="menu-link">
-              <a href="./portfolio.html" class="link-nav link">Portfolio</a>
+              <a href="./portfolio.html" class="link-nav link active"
+                >Portfolio</a
+              >
             </li>
             <li class="menu-link">
               <a href="" class="link-nav link">Contacts</a>
@@ -75,6 +77,13 @@
             <!--banking-app -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
+                <div class="window">
+                  <p class="window-parag">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
                 <img
                   src="./images/bankapp.jpg"
                   alt="Banking App Interface"
@@ -85,8 +94,8 @@
                     Banking App Interface Concept
                   </h2>
                   <p class="paragraphs">App</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- cash-pay -->
             <li class="part-of-gall-list">
@@ -227,7 +236,7 @@
             <li class="soc-med-list">
               <a href="" class="soc-med-link">
                 <svg width="24" height="24" class="soc-med-foot">
-                  <use href="./images/icon.svg#icon-inst-grey"></use>
+                  <use href="./images/icon.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
@@ -235,7 +244,7 @@
             <li class="soc-med-list">
               <a href="" class="soc-med-link">
                 <svg width="24" height="24" class="soc-med-foot">
-                  <use href="./images/icon.svg#icon-twit-grey"></use>
+                  <use href="./images/icon.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
@@ -243,7 +252,7 @@
             <li class="soc-med-list">
               <a href="" class="soc-med-link">
                 <svg width="24" height="24" class="soc-med-foot">
-                  <use href="./images/icon.svg#icon-face-grey"></use>
+                  <use href="./images/icon.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
@@ -251,7 +260,7 @@
             <li class="soc-med-list">
               <a href="" class="soc-med-link">
                 <svg width="24" height="24" class="soc-med-foot">
-                  <use href="./images/icon.svg#icon-in-grey"></use>
+                  <use href="./images/icon.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
