--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <!-- menu_nav -->
           <ul class="menu-nav list">
             <li class="menu-link">
-              <a href="./index.html" class="link-nav link">Studio</a>
+              <a href="./index.html" class="link-nav link active">Studio</a>
             </li>
             <li class="menu-link">
               <a href="./portfolio.html" class="link-nav link">Portfolio</a>
@@ -472,5 +472,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
