--- a/portfolio.html
+++ b/portfolio.html
@@ -77,18 +77,20 @@
             <!--banking-app -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
-                <div class="window">
-                  <p class="window-parag">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
+                <div class="wrap-window">
+                  <img
+                    src="./images/bankapp.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
                 </div>
-                <img
-                  src="./images/bankapp.jpg"
-                  alt="Banking App Interface"
-                  width="360"
-                />
                 <div class="name-categ">
                   <h2 class="title-three gall-title">
                     Banking App Interface Concept
@@ -99,117 +101,189 @@
             </li>
             <!-- cash-pay -->
             <li class="part-of-gall-list">
-              <a href="" class="link gall-link"
-                ><img
-                  src="./images/paybyphone.jpg"
-                  alt="Pay by phone"
-                  width="360"
-                />
+              <a href="" class="link gall-link">
+                <div class="wrap-window">
+                  <img
+                    src="./images/paybyphone.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Cashless Payment</h2>
                   <p class="paragraphs">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- meditation-app -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
-                <img
-                  src="./images/laptopandphone.jpg"
-                  alt="Laptop and phone"
-                  width="360"
-                />
+                <div class="wrap-window">
+                  <img
+                    src="./images/laptopandphone.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Meditation App</h2>
                   <p class="paragraphs">App</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!--taxi-service -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
-                <img
-                  src="./images/driver.jpg"
-                  alt="Hands on the steering wheel of a car"
-                  width="360"
-                />
+                <div class="wrap-window">
+                  <img
+                    src="./images/driver.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Taxi Service</h2>
                   <p class="paragraphs">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- screen-illustrations -->
             <li class="part-of-gall-list">
-              <a href="" class="link gall-link"
-                ><img
-                  src="./images/phonescreens.jpg"
-                  alt="Phone's Screanshots"
-                  width="360"
-                />
+              <a href="" class="link gall-link">
+                <div class="wrap-window">
+                  <img
+                    src="./images/phone_screanshots.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Screen Illustrations</h2>
                   <p class="paragraphs">Design</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- online-courses -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
-                <img
-                  src="./images/happygirl.jpg"
-                  alt="Happy girl"
-                  width="360"
-                />
+                <div class="wrap-window">
+                  <img
+                    src="./images/happygirl.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Online Courses</h2>
                   <p class="paragraphs">Marketing</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!--instagramm-stories -->
             <li class="part-of-gall-list">
               <a href="" class="link gall-link">
-                <img
-                  src="./images/instagrammstories.jpg"
-                  alt="instagramm stories compilation"
-                  width="360"
-                />
+                <div class="wrap-window">
+                  <img
+                    src="./images/instagrammstories.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">
                     Instagram Stories Concept
                   </h2>
                   <p class="paragraphs">Design</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- organic-food -->
             <li class="part-of-gall-list">
-              <a href="" class="link gall-link"
-                ><img
-                  src="./images/organicfood.jpg"
-                  alt="Woomen with bag"
-                  width="360"
-                />
+              <a href="" class="link gall-link">
+                <div class="wrap-window">
+                  <img
+                    src="./images/organicfood.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Organic Food</h2>
                   <p class="paragraphs">Web Site</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
             <!-- freash-coffee -->
             <li class="part-of-gall-list">
-              <a href="" class="link gall-link"
-                ><img
-                  src="./images/cupofcoffee.jpg"
-                  alt="Cup of coffee"
-                  width="360"
-                />
+              <a href="" class="link gall-link">
+                <div class="wrap-window">
+                  <img
+                    src="./images/cupofcoffee.jpg"
+                    alt="Banking App Interface"
+                    width="360"
+                  />
+                  <div class="window">
+                    <p class="window-parag">
+                      14 Stylish and User-Friendly App Design Concepts · Task
+                      Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                      App · Cloud Storage App
+                    </p>
+                  </div>
+                </div>
                 <div class="name-categ">
                   <h2 class="title-three gall-title">Fresh Coffee</h2>
                   <p class="paragraphs">Web Site</p>
-                </div></a
-              >
+                </div>
+              </a>
             </li>
           </ul>
         </div>
