--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
     <div data-modal class="backdrop is-hidden">
       <div class="modal-window">
         <button data-modal-close type="button" class="btn-modal">
-          <svg width="8" height="8">
+          <svg width="8" height="8" class="cross">
             <use href="./images/icon.svg#icon-close"></use>
           </svg>
         </button>
